# z-ai-glm-quota-menubar

./: AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  z-ai.md
scripts/: package_app.sh
src/: client.rs  keychain.rs  lib.rs  main.rs  quota.rs
tests/: quota_tests.rs
