[package]
name = "z-ai-quota-menubar"
version = "0.1.0"
edition = "2024"
description = "Lightweight macOS menu bar app for monitoring unofficial Z.ai and GLM quota usage."
license = "MIT"

[dependencies]
cocoa = "0.26"
libc = "0.2"
objc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
